--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link href="https://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple" >
 <link href='https://fonts.googleapis.com/css?family=Fontdiner Swanky' rel='stylesheet'>
 <body>
-    
+    <style>
+        
+    </style>
 </body>
 </html>
