--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <link href='https://fonts.googleapis.com/css?family=Fontdiner Swanky' rel='stylesheet'>
 <body>
     <style type="text/css">
-
+        body {
+            
+        }
     </style>
 </body>
 </html>
