--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <style type="text/css">
         body {
             padding: 0;
+            margin: 0;
             
         }
     </style>
