--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             margin: 0;
             overflow: hidden;
         }
-        
+        #arena {
+            
+        }
     </style>
 </body>
 </html>
