--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             overflow: hidden;
         }
         #arena {
-            
+            display: flex;
         }
     </style>
 </body>
