--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         }
         #arena {
             display: flex;
+            justify-content: center;
+            
         }
     </style>
 </body>
