--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         #arena {
             display: flex;
             justify-content: center;
-            
+            align-items: center;
         }
     </style>
 </body>
