--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             justify-content: center;
             align-items: center;
             position: fixed;
+            height: 100%;
+            
         }
     </style>
 </body>
