--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             align-items: center;
             position: fixed;
             height: 100%;
+            width: 100%;
             
         }
     </style>
