--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             position: fixed;
             height: 100%;
             width: 100%;
-            
+            background: #141719;
         }
+        
     </style>
 </body>
 </html>
