--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
             width: 100%;
             background: #141719;
         }
-        
+        #b1{
+            position: fixed;
+            
+        }
     </style>
 </body>
 </html>
