--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         #b1{
             position: fixed;
             bottom: 17vh;
+            left: 50%;
             
         }
     </style>
