--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             position: fixed;
             bottom: 17vh;
             left: 50%;
-            
+            height: 30px;
+            width: ;
         }
     </style>
 </body>
