--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             bottom: 17vh;
             left: 50%;
             height: 30px;
-            width: ;
+            width: 30px;
+            
         }
     </style>
 </body>
