--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             left: 50%;
             height: 30px;
             width: 30px;
+            background: #fffeea;
             
         }
     </style>
