--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             height: 30px;
             width: 30px;
             background: #fffeea;
-            
+            opacity
         }
     </style>
 </body>
