--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         #b2 {
             position: fixed;
             bottom: 7vh;
+            height: 30px;
             
         }
     </style>
