--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             position: fixed;
             bottom: 7vh;
             height: 30px;
+            width: 30px;
             
         }
     </style>
