--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             bottom: 7vh;
             height: 30px;
             width: 30px;
+            background: #fffeea;
             
         }
     </style>
