--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             opacity: 0.1;
         }
         #b3{
-            position: 
+            position: fixed;
+            
         }
     </style>
 </body>
