--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         #b3{
             position: fixed;
             bottom: 12vh;
-            left
+            left: 60%;
+            height: 
         }
     </style>
 </body>
