--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             position: fixed;
             bottom: 12vh;
             left: 60%;
-            height: 
+            height: 30px;
+            width: 30px;
+            
         }
     </style>
 </body>
