--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             left: 60%;
             height: 30px;
             width: 30px;
-            
+            background: #fffeea;
         }
     </style>
 </body>
