--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             height: 30px;
             width: 30px;
             background: #fffeea;
+            opacity: 0.1;
+            
         }
     </style>
 </body>
