--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         #b4{
             position: fixed;
             bottom: 7vh;
+            height: 30px;
+            width: 30px;
             
         }
     </style>
