--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             bottom: 7vh;
             height: 30px;
             width: 30px;
+            left: 50%;
             
         }
     </style>
