--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             height: 30px;
             width: 30px;
             left: 50%;
-            
+            background: #fffeea;
         }
     </style>
 </body>
