--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             width: 30px;
             left: 50%;
             background: #fffeea;
+            opacity: 0.1;
         }
     </style>
 </body>
