--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
             left: 50%;
             background: #fffeea;
             opacity: 0.1;
-                
-
         }
+    </style>
+    <style type="text/css">
+        
     </style>
 </body>
 </html>
