--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         }
     </style>
     <style type="text/css">
+        *{
+            user-select: none;
+        }
         
     </style>
 </body>
