--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         *{
             user-select: none;
         }
-        
+        body{
+            
+        }
     </style>
 </body>
 </html>
