--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             user-select: none;
         }
         body{
-            
+            margin: 0;
+            padding: 0;
         }
     </style>
 </body>
