--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         #di{
             height: 100%;
             width: 100%;
+            position: absolute;
             
         }
     </style>
