--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             height: 100%;
             width: 100%;
             position: absolute;
-            
+            z-index: 3;
         }
     </style>
 </body>
