--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             width: 100%;
             position: absolute;
             z-index: 3;
+            background-size: cover;
         }
     </style>
 </body>
