--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             position: absolute;
             z-index: 3;
             background-size: cover;
+            background-repeat: no-repeat;
         }
     </style>
 </body>
