--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             z-index: 3;
             background-size: cover;
             background-repeat: no-repeat;
+            background-position: ;
         }
     </style>
 </body>
