--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             z-index: 3;
             background-size: cover;
             background-repeat: no-repeat;
-            background-position: ;
+            background-position: 50%;
+            
         }
     </style>
 </body>
