--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-position: 50%;
-            
+            transition: ;
         }
     </style>
 </body>
