--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-position: 50%;
-            transition: ;
+            transition: 2s;
+        }
+        svg{
+            
         }
     </style>
 </body>
