--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         svg{
             display: inline;
             z-index: 0;
+            position: fixed;
             
         }
     </style>
