--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
             display: inline;
             z-index: 0;
             position: fixed;
-            b
+            background:linear-gradient(100deg,#141718 60%,maroon 60%);
+            
         }
     </style>
 </body>
