--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             z-index: 0;
             position: fixed;
             background:linear-gradient(100deg,#141718 60%,maroon 60%);
+            height: 100%;
             
         }
     </style>
