--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
             position: fixed;
             background:linear-gradient(100deg,#141718 60%,maroon 60%);
             height: 100%;
+            width: 100%;
+            padding-top: 40%;
             
         }
     </style>
