--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
             height: 100%;
             width: 100%;
             padding-top: 40%;
-            
+            padding-left: 2%;
         }
+.
     </style>
 </body>
 </html>
