--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
             padding-top: 40%;
             padding-left: 2%;
         }
-.
+        .font-effect-3d {
+            
+        }
     </style>
 </body>
 </html>
