--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
             padding-top: 40%;
             padding-left: 2%;
         }
-        .font-effect-3d {
-            
+        .font-effect-3d{
+            background:linear-gradient(360deg,red 50%,grey,black);
+-webkit-background-clip:text;
         }
     </style>
 </body>
