--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         .font-effect-3d{
             background:linear-gradient(360deg,red 50%,grey,black);
             -webkit-background-clip:text;
+            color: ;
         }
     </style>
 </body>
