--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         .font-effect-3d{
             background:linear-gradient(360deg,red 50%,grey,black);
             -webkit-background-clip:text;
-            color: ;
+            color: transparent;
+            display: flex;
         }
     </style>
 </body>
