--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             -webkit-background-clip:text;
             color: transparent;
             display: flex;
+            align-items: ;
         }
     </style>
 </body>
