--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
             -webkit-background-clip:text;
             color: transparent;
             display: flex;
-            align-items: ;
+            align-items: center;
+            
         }
     </style>
 </body>
