--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             color: transparent;
             display: flex;
             align-items: center;
-            
+            justify-content: ;
         }
     </style>
 </body>
