--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
             color: transparent;
             display: flex;
             align-items: center;
-            justify-content: ;
+            justify-content: center;
+            
         }
     </style>
 </body>
