--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            position: ;
+            position: relative;
+            
         }
     </style>
 </body>
