--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             align-items: center;
             justify-content: center;
             position: relative;
+            font-size: 5vh;
             
         }
     </style>
