--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             justify-content: center;
             position: relative;
             font-size: 5vh;
-            
+            font-weight: ;
         }
     </style>
 </body>
