--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             position: relative;
             font-size: 5vh;
             font-weight: 100000;
-            
+            backdrop-filter: ;
         }
     </style>
 </body>
