--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             font-size: 5vh;
             font-weight: 100000;
             backdrop-filter: blur(100px);
-            
+            letter-spacing: ;
         }
     </style>
 </body>
