--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
             font-size: 5vh;
             font-weight: 100000;
             backdrop-filter: blur(100px);
-            letter-spacing: ;
+            letter-spacing: 1.7vh;
+            
         }
     </style>
 </body>
