--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             font-weight: 100000;
             backdrop-filter: blur(100px);
             letter-spacing: 1.7vh;
-            fontfa
+            font-family: ;
         }
     </style>
 </body>
