--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
             font-weight: 100000;
             backdrop-filter: blur(100px);
             letter-spacing: 1.7vh;
-            font-family: ;
+            font-family: nosifer,monospace;
+            
         }
     </style>
 </body>
