--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             backdrop-filter: blur(100px);
             letter-spacing: 1.7vh;
             font-family: nosifer,monospace;
-            
+            padding-left: ;
         }
     </style>
 </body>
