--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
             backdrop-filter: blur(100px);
             letter-spacing: 1.7vh;
             font-family: nosifer,monospace;
-            padding-left: ;
+            padding-left: 7vh;
+            paddingr
         }
     </style>
 </body>
