--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
             letter-spacing: 1.7vh;
             font-family: nosifer,monospace;
             padding-left: 7vh;
-            paddingr
+            padding-right: 5vh;
+            padding-top: 2vh;
+            
         }
     </style>
 </body>
