--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             padding-left: 7vh;
             padding-right: 5vh;
             padding-top: 2vh;
+            width: 80%;
             
         }
     </style>
