--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             padding-right: 5vh;
             padding-top: 2vh;
             width: 80%;
-            
+            overflow: hidden;
         }
     </style>
 </body>
