--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             overflow: hidden;
         }
         #p1,#p2,#p3,#p4{
+            height: 10%;
             
         }
     </style>
