--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         #p1,#p2,#p3,#p4{
             height: 10%;
             width: 95%;
-            background: rgba(red, green, blue, alpha);
+            background: rgba(150, 60, 100, 0.09);
         }
     </style>
 
