--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             height: 10%;
             width: 95%;
             background: rgba(150, 60, 100, 0.09);
+            position: relative;
         }
     </style>
 
