--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
             width: 95%;
             background: rgba(150, 60, 100, 0.09);
             position: relative;
+            border-radius: 5vh;
+            
         }
     </style>
 
