--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             background: rgba(150, 60, 100, 0.09);
             position: relative;
             border-radius: 5vh;
-            
+            font-family: ;
         }
     </style>
 
