--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
             position: relative;
             border-radius: 5vh;
             font-family: 'coiny','Arial';
+            font-size: 6vh;
+            
         }
     </style>
 
