--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             border-radius: 5vh;
             font-family: 'coiny','Arial';
             font-size: 6vh;
+            display: flex;
             
         }
     </style>
