--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             font-family: 'coiny','Arial';
             font-size: 6vh;
             display: flex;
+            align-items: center;
             
         }
     </style>
