--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             font-size: 6vh;
             display: flex;
             align-items: center;
+            justify-content: center;
             
         }
     </style>
