--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            
+            box-shadow: inset;
         }
     </style>
 
