--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: inset;
+            box-shadow: inset 10px 10px 10px black;
         }
     </style>
 
