--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
             align-items: center;
             justify-content: center;
             box-shadow: inset 10px 10px 10px black;
+            font-weight: bolder;
+            
         }
     </style>
 
