--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             justify-content: center;
             box-shadow: inset 10px 10px 10px black;
             font-weight: bolder;
+            margin-top: 2vh;
             
         }
     </style>
