--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             box-shadow: inset 10px 10px 10px black;
             font-weight: bolder;
             margin-top: 2vh;
+            margin-left: 2vh;
             
         }
     </style>
