--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             font-weight: bolder;
             margin-top: 2vh;
             margin-left: 2vh;
+            backdrop-filter: blur(10px);
             
         }
     </style>
