--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             margin-top: 2vh;
             margin-left: 2vh;
             backdrop-filter: blur(10px);
+            color: white;
             
         }
     </style>
