--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             margin-left: 2vh;
             backdrop-filter: blur(10px);
             color: white;
-            
+            letter-spacing: 1.5vh;
         }
     </style>
 
