--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
             backdrop-filter: blur(10px);
             color: white;
             letter-spacing: 1.5vh;
+            opacity: 0.5;
+            
         }
     </style>
 
