--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
             opacity: 0.5;
         }
         #p1{
-            margin-top: ;
+            margin-top: 20vh;
+            
         }
     </style>
 
