--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
         #p1{
             margin-top: 20vh;
         }
-        
+        #p1:active{
+            
+        }
     </style>
 
 </body>
