--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             margin-top: 20vh;
         }
         #p1:active{
+            background: coral;
             
         }
     </style>
