--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         }
         #p1:active{
             background: coral;
-            
+            transform: scale();
         }
     </style>
 
