--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
         }
         #p1:active{
             background: coral;
-            transform: scale();
+            transform: scale(0.95);
+            
         }
     </style>
 
