--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         #p1:active{
             background: coral;
             transform: scale(0.95);
-            box-shadow: inset;
+            box-shadow: inset 0px 0px 40px;
         }
     </style>
 
