--- a/index.html
+++ b/index.html
@@ -134,11 +134,13 @@
             transform: scale(0.95);
             box-shadow: inset 0px 0px 40px black, 5px 5px 20px grey;
         }
+        #p2:active {
+            
+        }
 
 
 
 
-        
     </style>
 
 </body>
