--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             box-shadow: inset 0px 0px 40px black, 5px 5px 20px grey;
         }
         #p2:active {
-            
+            transform: rotate();
         }
 
 
