--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         }
         #p2:active {
             transform: rotate(30deg);
-            box-shadow: ;
+            box-shadow: inset 0px ;
         }
 
 
