--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         }
         #p2:active {
             transform: rotate(30deg);
-            box-shadow: inset 0px 0px 40px;
+            box-shadow: inset 0px 0px 40px black,5px 5px 20px ;
         }
 
 
