--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
         }
         #p2:active {
             transform: rotate(30deg);
-            box-shadow: inset 0px 0px 40px black,5px 5px 20px ;
+            box-shadow: inset 0px 0px 40px black,5px 5px 20px grey;
         }
+        
 
 
 
