--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
             transform: rotate(30deg);
             box-shadow: inset 0px 0px 40px black,5px 5px 20px grey;
         }
-        
+        #p3:active{
+            
+        }
 
 
 
