--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             box-shadow: inset 0px 0px 40px black,5px 5px 20px grey;
         }
         #p3:active{
+            transform: scale(0.95);
             
         }
 
