--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         }
         #p3:active{
             transform: scale(0.95);
-            
+            box-shadow: inset;
         }
 
 
