--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
         }
         #p3:active{
             transform: scale(0.95);
-            box-shadow: inset 0px 0px;
+            box-shadow: inset 0px 0px 40px black,5px 5px 20px grey;
+            
         }
 
 
