--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
             box-shadow: inset 0px 0px 40px black,5px 5px 20px grey;
         }
         #p4:active {
-            
+            background: red;
+            transform: scale(0.95);
+            box-shadow: inset 0px 0px 40px black, 5px 5px 20px grey;
         }
 
 
