--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             box-shadow: inset 0px 0px 40px black, 5px 5px 20px grey;
         }
         #s1 {
+            display: none;
             
         }
 
