--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         }
         #s1 {
             display: none;
-            align-items: ;
+            align-items: center;
         }
 
 
