--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
         #s1 {
             display: none;
             align-items: center;
-            justify-content: ;
+            justify-content: center;
+            
         }
 
 
