--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
             display: none;
             align-items: center;
             justify-content: center;
+            height: 12%;
             
         }
 
