--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             display: none;
             align-items: center;
             justify-content: center;
-            height: 1000004%;
+            height: 100004%;
 
         }
 
