--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
             align-items: center;
             justify-content: center;
             height: 12%;
+            width: ;
 
         }
 
