--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
             align-items: center;
             justify-content: center;
             height: 12%;
-            width: ;
+            width: 95%;
+            
 
         }
 
