--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             justify-content: center;
             height: 12%;
             width: 95%;
-            
+            background: ;
 
 
         }
