--- a/index.html
+++ b/index.html
@@ -154,8 +154,9 @@
             height: 12%;
             width: 95%;
             background: rgba(255, 255, 255, 0.3);
-            backdrop-filter: ;
-
+            backdrop-filter: blur(10px);
+            
+            
 
         }
 
