--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             width: 95%;
             background: rgba(255, 255, 255, 0.3);
             backdrop-filter: blur(10px);
+            position: absolute;
             
             
 
