--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
             background: rgba(255, 255, 255, 0.3);
             backdrop-filter: blur(10px);
             position: absolute;
+            top: 30vh;
             
             
 
