--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
             backdrop-filter: blur(10px);
             position: absolute;
             top: 30vh;
-            border-radius: ;
+            border-radius: 10%;
+            
             
 
         }
