--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
             position: absolute;
             top: 30vh;
             border-radius: 10%;
+            right: 1%;
             
             
 
