--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             top: 30vh;
             border-radius: 10%;
             right: 1%;
-            
+            border: 1px ;
             
 
         }
