--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
             border-radius: 10%;
             right: 1%;
             border: 1px dashed blue;
+            font-family: Fontdiner Swanky;
+            
             
 
         }
