--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         #s2 {
             display: none;
             align-items: center;
+            justify-content: center;
             
         }
 
