--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             display: none;
             align-items: center;
             justify-content: center;
-            
+            background: rgba(255, 255, 255, 0.3);
         }
 
 
