--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
             align-items: center;
             justify-content: center;
             background: rgba(255, 255, 255, 0.3);
+            backdrop-filter: blur(10px);
+            
         }
 
 
