--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
             justify-content: center;
             background: rgba(255, 255, 255, 0.3);
             backdrop-filter: blur(10px);
+            position: absolute;
             
         }
 
