--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             background: rgba(255, 255, 255, 0.3);
             backdrop-filter: blur(10px);
             position: absolute;
+            border-radius: 10%;
             
         }
 
