--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
             backdrop-filter: blur(10px);
             position: absolute;
             border-radius: 10%;
+            z-index: 1;
             
         }
 
