--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             position: absolute;
             border-radius: 10%;
             z-index: 1;
-            
+            border: 2px ;
         }
 
 
