--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
             border-radius: 10%;
             z-index: 1;
             border: 2px dotted black;
+            top: 0vh;
             
         }
 
