--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
             z-index: 1;
             border: 2px dotted black;
             top: 0vh;
+            left: 0vh;
             
         }
 
