--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
             border: 2px dotted black;
             top: 0vh;
             left: 0vh;
+            color: blue;
+            font-size: 2.5vh;
             
         }
 
