--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
             left: 0vh;
             color: blue;
             font-size: 2.5vh;
+            font-family: monospace;
             
         }
 
