--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
             color: blue;
             font-size: 2.5vh;
             font-family: monospace;
+            padding: 2vh;
             
         }
 
