--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             font-size: 2.5vh;
             font-family: monospace;
             padding: 2vh;
-            
+            font-family: Fontdiner Swanky;
         }
 
 
