--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
             padding: 2vh;
             font-family: Fontdiner Swanky;
         }
-        
+        @keyframes pu {
+            
+        }
 
 
 
