--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             font-family: Fontdiner Swanky;
         }
         @keyframes pu {
-            
+            from{top:0;}
         }
 
 
