--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         }
         @keyframes pu {
             from{top:0;}
-            to{top:-150%;}
+            to{top:-150%;display:none; }
         }
 
 
