--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@
         }
         @keyframes pu {
             from{top:0;}
-            to{top:-150%;display:none; }
+            to{top:-150%;display:none; opacity:0.8;}
         }
+        
 
 
 
