--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             to{top:-150%;display:none; opacity:0.8;}
         }
         .up{
-            animation: pu 3s;
+            animation: pu 3s 1 ease-in;
         }
 
 
