--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
             animation: pu 3s 1 ease-in both;
         }
         #ment {
+            position: fixed;
             
         }
 
