--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
             position: fixed;
             top: 0%;
             height: 30px;
-            width: 
+            width: 30px;
+            
 
         }
 
