--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
             height: 30px;
             width: 30px;
             right: 4%;
+            color: #fffeea;
             
 
         }
