--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
             width: 30px;
             right: 4%;
             color: #fffeea;
+            font-size: 5vh;
             
 
         }
