--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
             right: 4%;
             color: #fffeea;
             font-size: 5vh;
+            font-weight: bolder;
             
 
         }
