--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
             color: #fffeea;
             font-size: 5vh;
             font-weight: bolder;
+            letter-spacing: 0.7vh;
             
 
         }
