--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
             font-size: 5vh;
             font-weight: bolder;
             letter-spacing: 0.7vh;
+            cursor: pointer;
             
 
         }
