--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
             font-weight: bolder;
             letter-spacing: 0.7vh;
             cursor: pointer;
-            
+        }
+        #ment:active {
 
         }
-
 
 
 
