--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@
             transform: scale(1);
         }
         #life{
-            position: 
+            position: fixed;
+
+            
         }
 
 
