--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
             position: fixed;
             top: 50%;
             left: -25%;
+            height: 3%;
             
 
         }
