--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
             left: -25%;
             height: 3%;
             width: 60%;
+            background: lightgrey;
             
 
         }
