--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
             height: 3%;
             width: 60%;
             background: lightgrey;
+            border-radius: 10%;
             
 
         }
