--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
             width: 60%;
             background: lightgrey;
             border-radius: 10%;
-            transform: rotate();
+            transform: rotate(270deg);
+            
 
         }
 
