--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
             background: lightgrey;
             border-radius: 10%;
             transform: rotate(270deg);
+            opacity: 0.5;
             
 
         }
