--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
             border-radius: 10%;
             transform: rotate(270deg);
             opacity: 0.5;
+            font-family: baloo;
             
 
         }
