--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
             transform: rotate(270deg);
             opacity: 0.5;
             font-family: baloo;
-            
-
         }
-
+        #powerup{
+            
+        }
 
 
     </style>
