--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
         #powerup{
             display: flex;
             align-items: center;
+            justify-content: center;
             
         }
 
