--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
             align-items: center;
             justify-content: center;
             position: fixed;
+            bottom: 15%;
             
         }
 
