--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
             justify-content: center;
             position: fixed;
             bottom: 15%;
+            left: 75%;
             
         }
 
