--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
             position: fixed;
             bottom: 15%;
             left: 75%;
+            height: 4%;
             
         }
 
