--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
             left: 75%;
             height: 4%;
             width: 7%;
-            background: linear-gradient(200deg,red 1%);
+            background: linear-gradient(200deg,red 1%,white);
+            
         }
 
 
