--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
             height: 4%;
             width: 7%;
             background: linear-gradient(200deg,red 1%,white);
+            clip-path: circle(50%);
             
         }
 
