--- a/index.html
+++ b/index.html
@@ -225,6 +225,9 @@
             width: 7%;
             background: linear-gradient(200deg,red 1%,white);
             clip-path: circle(50%);
+            font-size:2vh;
+            opacity: 0.3;
+
             
         }
 
