--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
             clip-path: circle(50%);
             font-size:2vh;
             opacity: 0.3;
-            font-family: ;
+            font-family: Fredericka the Great;
+            
             
         }
 
