--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
             display: none;
             position: fixed;
             top: 10%;
+            left: 20%;
             
         }
 
