--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             top: 10%;
             left: 20%;
             width: 60%;
-            
+            background: lightgray;
         }
 
 
