--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
             left: 20%;
             width: 60%;
             background: lightgray;
+            color: rgba(255, 255, 255, 0.3);
         }
 
 
