--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
             left: 20%;
             width: 60%;
             background: lightgray;
-            color: rgba(255, 255, 254, 20);
+            color: rgba(255, 255, 254,20);
+            border-radius: 5%;
+            
         }
 
 
