--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
             background: lightgray;
             color: rgba(255, 255, 254,20);
             border-radius: 5%;
+            border: 1px double green;
             
         }
 
