--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
             border-radius: 5%;
             border: 1px double green;
             padding: 1vh;
+            font-family: anton;
             
         }
 
