--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@
             opacity: 0.3;
             font-family: Fredericka the Great;
         }
+        #powerup:active{
+            
+        }
         #po{
             display: none;
             position: fixed;
@@ -241,7 +244,7 @@
             border: 1px double green;
             padding: 1vh;
             font-family: anton;
-            
+
         }
 
 
