--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
             font-family: Fredericka the Great;
         }
         #powerup:active{
+            background: pink;
             
         }
         #po{
