--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
         }
         #powerup:active{
             background: pink;
+            transform: scale(0.7);
             
         }
         #po{
