--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
         #action{
             display: flex;
             justify-content: center;
+            align-items: center;
             
         }
 
