--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            position: fixed;
 
             
         }
