--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
             justify-content: center;
             align-items: center;
             position: fixed;
+            height: 6%;
+            
 
             
         }
