--- a/index.html
+++ b/index.html
@@ -258,6 +258,9 @@
             position: fixed;
             height: 6%;
             width: 10%;
+            bottom: 6%;
+            right: 7%;
+            color
 
 
             
