--- a/index.html
+++ b/index.html
@@ -260,7 +260,9 @@
             width: 10%;
             bottom: 6%;
             right: 7%;
-            color
+            color: white;
+            background: blue;
+            
 
 
             
