--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
             right: 7%;
             color: white;
             background: blue;
+            border-radius: 50%;
             
 
 
