--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
             color: white;
             background: blue;
             border-radius: 50%;
+            opacity: 0.4;
             
 
 
