--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
             background: blue;
             border-radius: 50%;
             opacity: 0.4;
+            font-family: Fredericka the Great;
             
 
 
