--- a/index.html
+++ b/index.html
@@ -266,7 +266,9 @@
             opacity: 0.4;
             font-family: Fredericka the Great;
         }
-        
+        #action:active{
+            
+        }
 
 
     </style>
