--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
             font-family: Fredericka the Great;
         }
         #action:active{
+            background: cyan;
             
         }
 
