--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         }
         #action:active{
             background: cyan;
-            
+            transform: scale(0.8);
         }
 
 
