--- a/index.html
+++ b/index.html
@@ -270,6 +270,13 @@
             background: cyan;
             transform: scale(0.8);
         }
+        #score{
+            position: fixed;
+            top: 0%;
+            left: 40%;
+            color:white;
+            
+        }
 
 
     </style>
