--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
             top: 0%;
             left: 40%;
             color:white;
+            font-family: Fredericka the Great;
             
         }
 
