--- a/index.html
+++ b/index.html
@@ -276,6 +276,8 @@
             left: 40%;
             color:white;
             font-family: Fredericka the Great;
+        }
+        #blur{
             
         }
 
