--- a/index.html
+++ b/index.html
@@ -278,7 +278,10 @@
             font-family: Fredericka the Great;
         }
         #blur{
-            
+            display: none;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
         }
 
 
