--- a/index.html
+++ b/index.html
@@ -282,6 +282,8 @@
             align-items: center;
             justify-content: center;
             position: absolute;
+            height: 100%;
+            
         }
 
 
