--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
             justify-content: center;
             position: absolute;
             height: 100%;
+            width: 100%;
             
         }
 
