--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@
             position: absolute;
             height: 100%;
             width: 100%;
-            backdrop-filter: blur();
+            backdrop-filter: blur(10px);
+            
         }
 
 
