--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             height: 100%;
             width: 100%;
             backdrop-filter: blur(10px);
-            
+            z-index: 10;
         }
 
 
