--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
         }
         #p{
             position:relative;
+            background: linear-gradient(white,blue,white);
             
         }
 
