--- a/index.html
+++ b/index.html
@@ -290,6 +290,8 @@
         #p{
             position:relative;
             background: linear-gradient(white,blue,white);
+            font-size: 5vh;
+            color: transparent;
             
         }
 
