--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
             background: linear-gradient(white,blue,white);
             font-size: 5vh;
             color: transparent;
+            font-family: Fontdiner Swanky,monospace;
             
         }
 
