--- a/index.html
+++ b/index.html
@@ -293,7 +293,8 @@
             font-size: 5vh;
             color: transparent;
             font-family: Fontdiner Swanky,monospace;
-            
+            -webkit-background-clip: text;
+    
         }
 
 
