--- a/index.html
+++ b/index.html
@@ -294,7 +294,9 @@
             color: transparent;
             font-family: Fontdiner Swanky,monospace;
             -webkit-background-clip: text;
-    
+        }
+        #retry{
+            
         }
 
 
