--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
         #retry{
             display: none;
             padding: 2vh;
+            position: absolute;
             
         }
 
