--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
             display: none;
             padding: 2vh;
             position: absolute;
+            bottom: 10%;
             
         }
 
