--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
             padding: 2vh;
             position: absolute;
             bottom: 10%;
+            font-size: 3vh;
             
         }
 
