--- a/index.html
+++ b/index.html
@@ -301,6 +301,7 @@
             position: absolute;
             bottom: 10%;
             font-size: 3vh;
+            color: blue;
             
         }
 
