--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
             font-size: 3vh;
             color: blue;
             clip-path: circle(60%);
+            left: 40%;
             
         }
 
