--- a/index.html
+++ b/index.html
@@ -305,7 +305,10 @@
             clip-path: circle(60%);
             left: 40%;
         }
-        
+        #next{
+            display: none;
+            
+        }
 
 
     </style>
