--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
         #next{
             display: none;
             padding: 2vh;
+            position: absolute;
             
         }
 
