--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
             display: none;
             padding: 2vh;
             position: absolute;
+            bottom: 10%;
             
         }
 
