--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@
             bottom: 10%;
             font-size: 3vh;
             color: blue;
+            clip-path: circle(60%);
             
         }
 
