--- a/index.html
+++ b/index.html
@@ -313,6 +313,8 @@
             font-size: 3vh;
             color: blue;
             clip-path: circle(60%);
+        }
+        #tex{
             
         }
 
