--- a/index.html
+++ b/index.html
@@ -315,6 +315,11 @@
             clip-path: circle(60%);
         }
         #tex{
+            position: absolute;
+            justify-content: center;
+            align-items: center;
+            z-index: 30;
+            background: #3a3b3c;
             
         }
 
