--- a/index.html
+++ b/index.html
@@ -320,7 +320,10 @@
             align-items: center;
             z-index: 30;
             background: #3a3b3c;
-            
+            color: white;
+            height: 100%;
+            width: 80%;
+            background: rgba(255, 255, 254,0.3;
         }
 
 
