--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
             color: white;
             height: 100%;
             width: 80%;
-            background: rgba(255, 255, 254,0.3;
+            background: rgba(255, 255, 254,0.3);
+            
         }
 
 
