--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
             height: 100%;
             width: 80%;
             background: rgba(255, 255, 254,0.3);
+            backdrop-filter: blur(100px);
             
         }
 
