--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
             width: 80%;
             background: rgba(255, 255, 254,0.3);
             backdrop-filter: blur(100px);
+            border: 1px solid white;
             
         }
 
