--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
             background: rgba(255, 255, 254,0.3);
             backdrop-filter: blur(100px);
             border: 1px solid white;
+            padding:10%;
             
         }
 
