--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             backdrop-filter: blur(100px);
             border: 1px solid white;
             padding:10%;
-            
+            border-rad
         }
 
 
