--- a/index.html
+++ b/index.html
@@ -327,8 +327,16 @@
             backdrop-filter: blur(100px);
             border: 1px solid white;
             padding:10%;
-            border-rad
+            border-radius: 5%;
         }
+        .ad{
+            display: none;
+            animation: 2s 1 ease both;
+        }
+        @keyframes f{
+            
+        }
+
 
 
     </style>
