--- a/index.html
+++ b/index.html
@@ -334,6 +334,12 @@
             animation: 2s 1 ease both;
         }
         @keyframes f{
+            0%{opacity:1;}
+            99%{opacity:0;}
+            100%{display: none;}
+        }
+        #ad{
+            position: absolute;
             
         }
 
