--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
         #ad{
             position: absolute;
             bottom: 50%;
-            
+            left: 5%;
+            border: ;
         }
 
 
