--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             position: absolute;
             bottom: 50%;
             left: 5%;
-            border: ;
+            border: 2px double blue;
         }
 
 
