--- a/index.html
+++ b/index.html
@@ -344,7 +344,9 @@
             left: 5%;
             border: 2px double blue;
         }
-
+        #name{
+            
+        }
 
 
     </style>
