--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             position: absolute;
             bottom: 30%;
             left: 5%;
-            
+            border: 2px ;
         }
 
 
