--- a/index.html
+++ b/index.html
@@ -348,8 +348,9 @@
             position: absolute;
             bottom: 30%;
             left: 5%;
-            border: 2px ;
+            border: 2px double blue;
         }
+        
 
 
     </style>
