--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
             border: 2px double blue;
         }
         </style>
-        <article>
-            
+        <article id="tex"><p id="te"></p>
+
         </article>
 
 
