--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             border: 2px double blue;
         }
         </style>
-        <article id="tex"><p id="te"></p>
+        <article id="tex"><p id="te"></p><button id="ad" onclick="ad()" ontouchstart=""></button>
 
         </article>
 
