--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             border: 2px double blue;
         }
         </style>
-        <article id="tex"><p id="te"></p><button id="ad" onclick="ad()" ontouchstart="input"></button>
+        <article id="tex"><p id="te"></p><button id="ad" onclick="ad()" ontouchstart="input()">>></button><input id="name" placeholder="Type in your name...">></button>
 
         </article>
 
