--- a/index.html
+++ b/index.html
@@ -351,10 +351,8 @@
             border: 2px double blue;
         }
         </style>
-        <article id="tex"><p id="te"></p><button id="ad" onclick="ad()" ontouchstart="input()">>></button><input id="name" placeholder="Type in your name...">></button>
-
-        </article>
-
+        <article id="tex"><p id="te"></p><button id="ad" onclick="ad()" ontouchstart="input()">>></button><input id="name" placeholder="Type in your name..." type="text"></input></article>
+        
 
     </style>
 
