--- a/index.html
+++ b/index.html
@@ -352,7 +352,9 @@
         }
         </style>
         <article id="tex"><p id="te"></p><button id="ad" onclick="ad()" ontouchstart="input()">>></button><input id="name" placeholder="Type in your name..." type="text"></input></article>
-        
+        <div id="di">
+            
+        </div>
 
     </style>
 
