--- a/index.html
+++ b/index.html
@@ -353,7 +353,9 @@
         </style>
         <article id="tex"><p id="te"></p><button id="ad" onclick="ad()" ontouchstart="input()">>></button><input id="name" placeholder="Type in your name..." type="text"></input></article>
         <div id="di">
-            
+            <svg height=""300>
+                
+            </svg>
         </div>
 
     </style>
