--- a/index.html
+++ b/index.html
@@ -354,7 +354,37 @@
         <article id="tex"><p id="te"></p><button id="ad" onclick="ad()" ontouchstart="input()">>></button><input id="name" placeholder="Type in your name..." type="text"></input></article>
         <div id="di">
             <svg height=""300>
-                
+                <!--#ff4614-->
+            <path d="M70 70 l40 -35 l30 60 Z"
+            fill="#ff4614"
+            id="left_eye"></path>
+      <path d="M60 40 l45 -5 l37 35 l15 -15
+               h-15 l-35 -40 Z"
+            fill="#ff4614"
+            id="left_eye_brow"></path>
+      <path d="M170 90 l30 34 l-57 3 Z"
+            fill="#ff4614"
+            id="nose"></path>
+      <path d="M270 70 l-40 -35 l-30 55 Z"
+            fill="#ff4614"
+            id="right_eye"></path>
+      <path d="M280 40 l-45 -5 l-37 35 l-15 -15
+               h15 l35 -40 Z"
+            fill="#ff4614"
+            id="right_eye_brow"></path>
+      <path d="M50 85 l8 90 l12 -20 l14 53
+               l23 -24 l10 38 l17 -25 l7 32
+               l22 -30 l18 34 l8 -36 l11 30
+               l9 -35 l17 38 l11 -41 l24 31
+               l2 -38 l20 17 l8 -110
+               l-17 66 l-15 -42 l-12 64
+               l-16 -38 l-18 40 l-12 -38
+               l-22 56 l-14 -50
+               l-10 49 l-19 -46 l-12 43
+               l-10 -53 l-26 37 l-17 -65
+               l-9 15 Z"
+            fill="#ff4614"
+            id="mouth"></path>
             </svg>
         </div>
 
