--- a/index.html
+++ b/index.html
@@ -386,6 +386,10 @@
             fill="#ff4614"
             id="mouth"></path>
             </svg>
+            <p class="font-effect-3d>Infected</p>
+            <p id= "p2" onclick="opt()">Options</p><span id="s1">
+                
+            </span>
         </div>
 
     </style>
