--- a/index.html
+++ b/index.html
@@ -388,6 +388,8 @@
             </svg>
             <p class="font-effect-3d>Infected</p>
             <p id= "p2" onclick="opt()">Options</p><span id="s1">
+            <input id="f"type="radio" name="z" onclick="="></input>Music off
+            </span>
 
 
 
