--- a/index.html
+++ b/index.html
@@ -390,7 +390,10 @@
             <p id= "p2" onclick="opt()">Options</p><span id="s1">
             <input id="f"type="radio" name="z" onclick="="></input>Music off
             </span>
-            <p id=""></p>
+            <p id="p3" onclick="help()">Help</p>
+            <span id="s2">
+                
+            </span>
 
 
 
