--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
             </span>
             <p id="p3" onclick="help()">Help</p>
             <span id="s2">
-                Run around using the ley pad and try to find your targets
+                Run around using the key pad and try to find your targets before they find and kill you...
             </span>
 
 
