--- a/index.html
+++ b/index.html
@@ -393,6 +393,8 @@
             <p id="p3" onclick="help()">Help</p>
             <span id="s2">
                 Run around using the key pad and try to find your targets before they find and kill you...
+                <br>Use the action button to attack the monsters(when in range)
+                <br>
             </span>
 
 
