--- a/index.html
+++ b/index.html
@@ -394,7 +394,8 @@
             <span id="s2">
                 Run around using the key pad and try to find your targets before they find and kill you...
                 <br>Use the action button to attack the monsters(when in range)
-                <br>Use the powerup button to increase the size of the spotlight
+                <br>Use the powerup button to increase the size of the spotlight,temporarily
+                
             </span>
 
 
