--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 Run around using the key pad and try to find your targets before they find and kill you...
                 <br>Use the action button to attack the monsters(when in range)
                 <br>Use the powerup button to increase the size of the spotlight,temporarily
-                
+                <br>The more the infected succeed in attacking the more enhanced they become
             </span>
 
 
