--- a/index.html
+++ b/index.html
@@ -396,6 +396,7 @@
                 <br>Use the action button to attack the monsters(when in range)
                 <br>Use the powerup button to increase the size of the spotlight,temporarily
                 <br>The more the infected succeed in attacking the more enhanced they become
+                <br>Just as the "use to be normal" citizens had different features, so
             </span>
 
 
