--- a/index.html
+++ b/index.html
@@ -396,9 +396,16 @@
                 <br>Use the action button to attack the monsters(when in range)
                 <br>Use the powerup button to increase the size of the spotlight,temporarily
                 <br>The more the infected succeed in attacking the more enhanced they become
-                <br>Just as the "use to be normal" citizens had different features, so does the infected have different speeds, strength, attack method, and rewards 
+                <br>Just as the "use to be normal" citizens had different features, so does the infected have different speeds, strength, attack method, and rewards for killing them
             </span>
+            <p id="p4" onclick="location.reload()">Exit</p>
+        </div>
+        <div>
+            <div id="arena">
+                <canvas id=""> </canvas>
 
+            </div>
+        </div>
 
 
 
