--- a/index.html
+++ b/index.html
@@ -402,9 +402,13 @@
         </div>
         <div>
             <div id="arena">
-                <canvas id=""> </canvas>
+                <canvas id="c2"> 
 
+                </canvas>
             </div>
+        </div>
+        <div id="blur"><p id="p"></p>
+
         </div>
 
 
