--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                 </canvas>
             </div>
         </div>
-        <div id="blur"><p id="p"></p>
+        <div id="blur"><p id="p"></p><button id="next" onclick="next()"></button><button id="retry" onclick=""></button>
 
         </div>
 
