--- a/index.html
+++ b/index.html
@@ -407,9 +407,9 @@
                 </canvas>
             </div>
         </div>
-        <div id="blur"><p id="p"></p><button id="next" onclick="next()"></button><button id="retry" onclick=""></button>
-
+        <div id="blur"><p id="p"></p><button id="next" onclick="next()"></button><button id="retry" onclick="retry()">Retry</button>
         </div>
+        <span id="score">Score</span>
 
 
 
