--- a/index.html
+++ b/index.html
@@ -409,7 +409,8 @@
         </div>
         <div id="blur"><p id="p"></p><button id="next" onclick="next()"></button><button id="retry" onclick="retry()">Retry</button>
         </div>
-        <span id="score">Score</span>
+        <span id="score">Score:</span>
+        <span id="ment" onclick=""></span>
 
 
 
