--- a/index.html
+++ b/index.html
@@ -410,7 +410,8 @@
         <div id="blur"><p id="p"></p><button id="next" onclick="next()"></button><button id="retry" onclick="retry()">Retry</button>
         </div>
         <span id="score">Score:</span>
-        <span id="ment" onclick=""></span>
+        <span id="ment" onclick="ment()">||<span>
+            
 
 
 
