--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         </div>
         <span id="score">Score:</span>
         <span id="ment" onclick="ment()">||<span>
-        <progress min="0" max="10"
+        <progress min="0" max="10" id="life></progress>
 
 
 
