--- a/index.html
+++ b/index.html
@@ -411,7 +411,9 @@
         </div>
         <span id="score">Score:</span>
         <span id="ment" onclick="ment()">||<span>
-        <progress min="0" max="10" id="life></progress>
+        <progress min="0" max="10" id="life"></progress>
+        <span id="powerup" onclick="lit()"></span>
+        <span></span>
 
 
 
