--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
         </span>
         <button id="b1" onclick="up()">^</button>
         <button id="b2" onclick="up()"><</button>
-        
+        <button id=""></button>
 
 
 
