--- a/index.html
+++ b/index.html
@@ -417,8 +417,9 @@
         <br><input onclick="submit()" id="no" name="o" type="radio" >No, how did I get here in the first place...I know my right!!!</input>
         </span>
         <button id="b1" onclick="up()">^</button>
-        <button id="b2" onclick="up()"><</button>
-        <button id="b3" onclick="forward"></button>
+        <button id="b2" onclick="back()"><</button>
+        <button id="b3" onclick="forward()">></button>
+        <button id="b3" onclick="forward()">></button>
 
 
 
