--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         <button id="b1" onclick="up()">^</button>
         <button id="b2" onclick="back()"><</button>
         <button id="b3" onclick="forward()">></button>
-        <button id="b3" onclick="forward()">></button>
+        <button id="b4" onclick="down()">></button>
 
 
 
