--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
         <button id="b2" onclick="back()"><</button>
         <button id="b3" onclick="forward()">></button>
         <button id="b4" onclick="down()">v</button>
+        <span id="action" onclick="act()"></span>
 
 
 
