--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         <div id="blur"><p id="p"></p><button id="next" onclick="next()"></button><button id="retry" onclick="retry()">Retry</button>
         </div>
         <span id="score">Score:</span>
-        <span id="ment" onclick="ment()">||<span>
+        <span id="ment" onclick="ment()">||</span>
         <progress min="0" max="10" id="life"></progress>
         <span id="powerup" onclick="lit()"></span>
         <span id="po"><b style="color:red;">Boss:</b>Welcome to central point of this madness or as well like to call it,<i>Ground zero</i>...we plan to cleanse the city of all infected with the I-virus and our intel indicates that you're the our best and probably only option to carry this very important task of confronting these vermin with a gun pointed to their heads...Are you willing to take the job<br><input onclick="submit()" id="yes" type="radio" name="o">Yes, I'll do this for my family and for everyone these beasts have hurt</input>
@@ -421,12 +421,8 @@
         <button id="b3" onclick="forward()">></button>
         <button id="b4" onclick="down()">v</button>
         <span id="action" onclick="act()"></span>
-
-
-
-                
-            </span>
         </div>
+        
 
     </style>
 
