--- a/index.html
+++ b/index.html
@@ -422,7 +422,10 @@
         <button id="b4" onclick="down()">v</button>
         <span id="action" onclick="act()"></span>
         </div>
-        
+        <audio src="https://www.freesoundeffects.com/files/music_336821999466520_file7d0665438e81d8eceb98c1e31fca80c1.wav" id="sound"></audio>
+        <audio src="https://www.freesoundeffects.com/files/music_545407351466419_file7d0665438e81d8eceb98c1e31fca80c1.wav" id="sound2" ></audio>
+        <audio src="https://www.freesoundeffects.com/files/music_377821421428554_filed72d187df41e10ea7d9fcdc7f5909205.wav" id="sound3" ></audio>
+
 
     </style>
 
