--- a/index.html
+++ b/index.html
@@ -425,6 +425,12 @@
         <audio src="https://www.freesoundeffects.com/files/music_336821999466520_file7d0665438e81d8eceb98c1e31fca80c1.wav" id="sound"></audio>
         <audio src="https://www.freesoundeffects.com/files/music_545407351466419_file7d0665438e81d8eceb98c1e31fca80c1.wav" id="sound2" ></audio>
         <audio src="https://www.freesoundeffects.com/files/music_377821421428554_filed72d187df41e10ea7d9fcdc7f5909205.wav" id="sound3" ></audio>
+        <audio src="https://www.dropbox.com/s/0vr29qf4h9q53bb/failed_jump.wav?raw=1" id="failed" ></audio>
+        <audio src="https://dl.dropbox.com/s/4wdp3e8hln71i97/Sound%20Effect%20Horror%20Intro%201.mp3?dl=1" id="music" ></audio>
+        <audio src="https://gamepedia.cursecdn.com/minecraft_gamepedia/7/74/Cave17.ogg" id="creep" loop></audio>
+        <audio src="https://gamepedia.cursecdn.com/minecraft_gamepedia/f/fb/Cave18.ogg"  id="creep2" loop></audio>
+        <audio   src="https://www.fesliyanstudios.com/play-mp3/2464" id="foot"></audio>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 
     </style>
