--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             </svg>
             <p class="font-effect-3d>Infected</p>
             <p id= "p2" onclick="opt()">Options</p><span id="s1">
-            <input id="f"type="radio" name="z" onclick="="></input>Music off
+            <input id="f"type="radio" name="z" onclick=""></input>Music off
             </span>
             <p id="p3" onclick="help()">Help</p>
             <span id="s2">
