--- a/index.html
+++ b/index.html
@@ -468,6 +468,10 @@
             off()
             }
             }
+            function on(){
+            setInterval(function(){document.getElementById("creep").play()},9000)
+            setInterval(function(){document.getElementById("creep2").play()},15000)
+            }
 
 
     </style>
